menu and new type of tasks added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "es2015",
-      "lib": ["dom"]
+      "lib": ["dom", "es6"]
     },
     "include": ["*"]
   }
